changed warpper to wrapper

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <script type="text/javascript" src="js/gin-quest.js"></script>
 </head>
 <body>
-  <div id="warpper">
+  <div id="wrapper">
     <canvas id="c" />
   </div>
 </body>
