--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <title>gin-quest</title>
+  <meta name="viewport" content="initial-scale=1, maximum-scale=1">
   <link rel="stylesheet" type="text/css" href="css/styles.css">
   <script type="text/javascript" src="js/gin-quest.js"></script>
 </head>
