--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <title>gin-quest</title>
   <meta name="viewport" content="initial-scale=1, maximum-scale=1">
   <link rel="stylesheet" type="text/css" href="css/styles.css">
+  <script type="text/javascript" src="js/astar/node.js"></script>
   <script type="text/javascript" src="js/astar/grid.js"></script>
   <script type="text/javascript" src="js/states/grid-state.js"></script>
   <script type="text/javascript" src="js/gin-quest.js"></script>
