imported astar.js

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <link rel="stylesheet" type="text/css" href="css/styles.css">
   <script type="text/javascript" src="js/astar/node.js"></script>
   <script type="text/javascript" src="js/astar/grid.js"></script>
+  <script type="text/javascript" src="js/astar/astar.js"></script>
   <script type="text/javascript" src="js/states/grid-state.js"></script>
   <script type="text/javascript" src="js/gin-quest.js"></script>
 </head>
