--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <script type="text/javascript" src="js/astar/grid.js"></script>
   <script type="text/javascript" src="js/astar/astar.js"></script>
   <script type="text/javascript" src="js/states/grid-state.js"></script>
+  <script type="text/javascript" src="js/states/camera-state.js"></script>
   <script type="text/javascript" src="js/gin-quest.js"></script>
 </head>
 <body>
