Created gin sprite object

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <script type="text/javascript" src="js/astar/node.js"></script>
   <script type="text/javascript" src="js/astar/grid.js"></script>
   <script type="text/javascript" src="js/astar/astar.js"></script>
+  <script type="text/javascript" src="js/sprites/gin.js"></script>
   <script type="text/javascript" src="js/states/grid-state.js"></script>
   <script type="text/javascript" src="js/states/camera-state.js"></script>
   <script type="text/javascript" src="js/gin-quest.js"></script>
