--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <script type="text/javascript" src="js/misc/camera.js"></script>
   <script type="text/javascript" src="js/states/grid-state.js"></script>
   <script type="text/javascript" src="js/states/camera-state.js"></script>
+  <script type="text/javascript" src="js/states/load-state.js"></script>
   <script type="text/javascript" src="js/gin-quest.js"></script>
 </head>
 <body>
