Mades ome fiddling progress

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   <script type="text/javascript" src="js/misc/camera.js"></script>
   <script type="text/javascript" src="js/states/grid-state.js"></script>
   <script type="text/javascript" src="js/states/camera-state.js"></script>
+  <script type="text/javascript" src="js/states/parc-state.js"></script>
   <script type="text/javascript" src="js/states/load-state.js"></script>
   <script type="text/javascript" src="js/gin-quest.js"></script>
 </head>
