--- a/index.html
+++ b/index.html
@@ -5,16 +5,19 @@
   <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0, user-scalable=no">
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <link rel="stylesheet" type="text/css" href="css/styles.css">
+  <link rel="stylesheet" type="text/css" href="css/styles.css?v22">
+  <script type="text/javascript" src="js/misc/utils.js?v2222"></script>
   <script type="text/javascript" src="js/astar/node.js"></script>
   <script type="text/javascript" src="js/astar/grid.js"></script>
   <script type="text/javascript" src="js/astar/astar.js"></script>
-  <script type="text/javascript" src="js/sprites/gin.js"></script>
+  <script type="text/javascript" src="js/sprites/gin.js?v22"></script>
+  <script type="text/javascript" src="js/sprites/jim.js?v22"></script>
+  <script type="text/javascript" src="js/sprites/pim.js?v22"></script>
   <script type="text/javascript" src="js/misc/camera.js"></script>
   <script type="text/javascript" src="js/states/grid-state.js"></script>
   <script type="text/javascript" src="js/states/camera-state.js"></script>
-  <script type="text/javascript" src="js/states/parc-state.js"></script>
-  <script type="text/javascript" src="js/states/load-state.js"></script>
+  <script type="text/javascript" src="js/states/parc-state.js?v2222"></script>
+  <script type="text/javascript" src="js/states/load-state.js?v22"></script>
   <script type="text/javascript" src="js/gin-quest.js"></script>
 </head>
 <body>
