created CaveState class

--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
   <script type="text/javascript" src="js/states/grid-state.js"></script>
   <script type="text/javascript" src="js/states/camera-state.js"></script>
   <script type="text/javascript" src="js/states/parc-state.js?v3333"></script>
-  <script type="text/javascript" src="js/states/load-state.js?v22"></script>
+  <script type="text/javascript" src="js/states/cave-state.js?v5"></script>
+  <script type="text/javascript" src="js/states/load-state.js?v4"></script>
   <script type="text/javascript" src="js/gin-quest.js"></script>
 </head>
 <body>
