attempt to switch states when walking over a node

--- a/index.html
+++ b/index.html
@@ -7,17 +7,17 @@
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
   <link rel="stylesheet" type="text/css" href="css/styles.css?v22">
   <script type="text/javascript" src="js/misc/utils.js?v2222"></script>
-  <script type="text/javascript" src="js/astar/node.js"></script>
+  <script type="text/javascript" src="js/astar/node.js?v6"></script>
   <script type="text/javascript" src="js/astar/grid.js"></script>
   <script type="text/javascript" src="js/astar/astar.js"></script>
-  <script type="text/javascript" src="js/sprites/gin.js?v22"></script>
+  <script type="text/javascript" src="js/sprites/gin.js?v6"></script>
   <script type="text/javascript" src="js/sprites/jim.js?v22"></script>
   <script type="text/javascript" src="js/sprites/pim.js?v22"></script>
   <script type="text/javascript" src="js/misc/camera.js"></script>
   <script type="text/javascript" src="js/states/grid-state.js"></script>
   <script type="text/javascript" src="js/states/camera-state.js"></script>
   <script type="text/javascript" src="js/states/parc-state.js?v3333"></script>
-  <script type="text/javascript" src="js/states/cave-state.js?v5"></script>
+  <script type="text/javascript" src="js/states/cave-state.js?v6"></script>
   <script type="text/javascript" src="js/states/load-state.js?v4"></script>
   <script type="text/javascript" src="js/gin-quest.js"></script>
 </head>
